--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ dependencies: []
 galaxy_info:
   author: darkraiden
   description: Base Role
-  company: "Crowdcube ltd"
+  company: ""
   license: "license (BSD, MIT)"
   min_ansible_version: 2.2
   platforms:
