--- a/travis/test.yml
+++ b/travis/test.yml
@@ -8,5 +8,7 @@
         state: present
   roles:
     - role_under_test
+  vars:
+    - env: travis
   vars_files:
     - /etc/ansible/roles/role_under_test/local/base.yml
