--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
 
   # Test role idempotence.
   - idempotence=$(mktemp)
-  - docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/travis/test.yml --skip-tags="hostname swap security" | tee -a ${idempotence}
+  - docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/travis/test.yml --skip-tags="hostname" --skip-tags="swap" --skip-tags="security" | tee -a ${idempotence}
   - >
     tail ${idempotence}
     | grep -q 'changed=0.*failed=0'
