--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ script:
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/travis/test.yml --syntax-check'
 
   # Test role.
-  - 'docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/travis/test.yml --skip-tags="hostname,swap,security"'
+  - 'docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/travis/test.yml --skip-tags="hostname,swap,security,ntp"'
 
   # Test role idempotence.
   - idempotence=$(mktemp)
-  - 'docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/travis/test.yml --skip-tags="hostname" --skip-tags="swap" --skip-tags="security" | tee -a ${idempotence}'
+  - 'docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/travis/test.yml --skip-tags="hostname,swap,security,ntp" | tee -a ${idempotence}'
   - >
     tail ${idempotence}
     | grep -q 'changed=0.*failed=0'
