set locale only if file is found

--- a/tasks/RedHat/locale.yml
+++ b/tasks/RedHat/locale.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Check if the system locale exists
+  stat:
+    path: /etc/locale.conf
+  register: locale_status
+
 - name: Set the system locale
   lineinfile:
     dest: /etc/locale.conf
@@ -7,8 +12,8 @@
     line: "LANG={{ base_lang }}"
     state: present
   register: locale_status
-  when: base_lang != ""
+  when: base_lang != "" and locale_status.stat.exists
 
 - name: Set the current session with set locale
   command: "localectl set-locale LANG=\"{{ base_lang }}\" LC_CTYPE=\"{{ base_lc_ctype }}\""
-  when: locale_status.changed and base_lc_ctype != ""
+  when: locale_status.changed and base_lc_ctype != "" and locale_status.stat.exists
