install hostname as pre task on non-rhel distros

--- a/test/integration/base/default.yml
+++ b/test/integration/base/default.yml
@@ -8,3 +8,5 @@
     - package:
         name: hostname
         state: present
+        update_cache: True
+      when: ansible_distribution != "CentOS"
